--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint app.js"
+    "lint": "eslint app.js",
+    "start": "nodemon server.js"
   },
   "keywords": [
     "rest",
@@ -18,7 +19,10 @@
   "author": "Bilel Abderrahmane BENZIANE",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.19.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
